[gd_scene load_steps=11 format=4 uid="uid://bonxnbvx3h8t2"]

[ext_resource type="PackedScene" uid="uid://c3bn8thwt3fos" path="res://scene/ui_night_timer.tscn" id="1_8gnde"]
[ext_resource type="TileSet" uid="uid://0iiaklhetwlj" path="res://Ressources/Tilesets/tileset.tres" id="1_ha6tx"]
[ext_resource type="Script" path="res://Levels/levelManager.gd" id="1_o6mrg"]
[ext_resource type="PackedScene" uid="uid://dm84msbhn4psu" path="res://scene/platformer_caribou.tscn" id="2_lytn4"]
[ext_resource type="PackedScene" uid="uid://dmuyrobm65c0l" path="res://scene/ui_coin_life.tscn" id="2_v2qow"]

[sub_resource type="Gradient" id="Gradient_44qg4"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.0509804, 0.0509804, 0.0509804, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_dgi2b"]
gradient = SubResource("Gradient_44qg4")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cxkd"]
size = Vector2(39, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7wqnl"]
size = Vector2(20, 36)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_urmcl"]
size = Vector2(20, 40)

[node name="Level2" type="Node2D"]
script = ExtResource("1_o6mrg")
next_stage1 = "res://Levels/Level3.tscn"
next_stage2 = "res://Levels/Level4.tscn"
next_stage3 = "res://Levels/Level1.tscn"

[node name="BlackBackground" type="Sprite2D" parent="."]
position = Vector2(-4, -1)
scale = Vector2(5.625, 770.5)
texture = SubResource("GradientTexture1D_dgi2b")
metadata/_edit_lock_ = true

[node name="LayerBackground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAaAAkABwADAB0AAAACAAYACQABABMAAAAPAAQACQAJABYAAAAeAAUACQABABAAAAAAAAMACQAGAAkAAAACAAEACQABAAkAAAAIAAUACQAKAAkAAAAOAAUACQACAA0AAAAMAAMACQACAAwAAAAcAAIACQAEAAwAAAAjAAQACQAEAAwAAAAgAAAACQAGAAoAAAAXAAEACQAIAAoAAAAUAAAACQAEAA0AAAAJAAEACQAFAAwAAAAGAAIACQADAAkAAAARAAAACQALAA0AAAAUAAEACQAEAAwAAAAdAAMACQAFAAkAAAAbAAQACQANAA0AAAAXAAQACQAJAAoAAAAYAAQACQAKAA0AAAABAAgAAgAEAAkAAAABAAkAAgAEAAoAAAABAAoAAgAEAAsAAAABAAsAAgABAEkAAAACAAgAAgAFAAkAAAACAAkAAgAFAAoAAAACAAoAAgAFAAsAAAACAAsAAgACAEkAAAADAAkAAgABAAoAAAADAAoAAgABAAsAAAADAAsAAgADAEUAAAAEAAkAAgACAAoAAAAEAAoAAgACAAsAAAAEAAsAAgAEAEUAAAAIAAgAAgABAAoAAAAIAAkAAgABAAsAAAAIAAoAAgADAEUAAAAJAAgAAgACAAoAAAAJAAkAAgACAAsAAAAJAAoAAgAEAEUAAAALAAYAAgAEAAkAAAALAAcAAgAEAAoAAAALAAgAAgAEAAsAAAALAAkAAgABAEkAAAAMAAYAAgAFAAkAAAAMAAcAAgAFAAoAAAAMAAgAAgAFAAsAAAAMAAkAAgACAEkAAAAHAAkABgATAAgAAAAHAAoABgATAAkAAAAVAAgABgATAAgAAAAVAAkABgATAAkAAAAXAA8ABgATAAgAAAAXABAABgATAAkAAAARAAcABgATAAgAAAARAAgABgATAAkAAAAfAAgAAgABAAoAAAAfAAkAAgABAAsAAAAfAAoAAgADAEUAAAAgAAgAAgACAAoAAAAgAAkAAgACAAsAAAAgAAoAAgAEAEUAAAAhAAcAAgAEAAkAAAAhAAgAAgAEAAoAAAAhAAkAAgAEAAsAAAAhAAoAAgABAEkAAAAPABgABAAdABMAAAAQABgABAAdABQAAAASABUABAAbABEAAAAUABUABAAXABEAAAAUABQABAAdABEAAAAYABQABAAdABMAAAAhABAABAAdABIAAAAWABoABAAZABQAAAATABgABAAbABEAAAAcABYABAAXABEAAAAdABUABAAdABIAAAAeABgABAAXABMAAAAYABcABAAXABQAAAAZABUABAAXABEAAAAaABMABAAbABMAAAAfAA0ABAAdABEAAAAeABUABAAdABEAAAAgABIABAAbABMAAAAhABQABAAZABEAAAAhABUABAAdABQAAAABAA8ABAAbABIAAAAEAA8ABAAdABMAAAAFAA8ABAAdABEAAAAJAA4ABAAdABIAAAAKAA0ABAAXABEAAAAMAA0ABAAdABIAAAALAA8ABAAbABMAAAAGABAABAAbABIAAAAEABUABAAXABMAAAAGABcABAAbABMAAAACABQABAAbABIAAAACABYABAAXABIAAAAEABEABAAbABIAAAAQAA0ABAAXABMAAAAdABEABAAZABEAAAAeABEABAAZABMAAAAeABAABAAbABEAAAAFAAsAAQAFABQAAAAbAA4AAQADABQAAAAZAA8AAQABABQAAAASABEAAQABABQAAAAOABMAAQADABQAAAAQABIABwADABwAAAAKABIAAQAFAA4AAAALABIAAQAGAA4AAAAMABIAAQAHAA4AAAARAA8AAQACAA4AAAASAA8AAQABAA4AAAAZAA0AAQAFAA4AAAAOABAAAQAFAA4AAAAKABQACQADAAoAAAAKABUACQAEAAwAAAALABgACQAEAAoAAAAQABEACQABAAkAAAASABAACQAKAAoAAAAVAA4ACQAIAAkAAAAXAAsACQAKAA0AAAAXAAkACQAIAAkAAAAZAAcACQALAA0AAAAbAA0ACQADAAoAAAA=")
tile_set = ExtResource("1_ha6tx")

[node name="LayerGround" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAwAAQABAAEAAAABAAwAAgAaAEkAAAACAAwAAgAbAEkAAAADAAwAAgAaAEkAAAAEAAwAAgAbAEkAAAAFAAwAAQABAAEAAAAGAAsAAQADAAEAAAAHAAsAAgAaAEUAAAAIAAsAAgAaAEkAAAAJAAsAAgAbAEkAAAAOAAsAAQABAAEAAAAPAAsAAQABAAEAAAASAAsABAATAAIAAAATAAsAAQABAAEAAAAQAAkAAQADAAEAAAAGAAwABAAVAAIAAAAWAAsABAANAAIAAAAWAAwABAANAAIAAAAUAAsABAAVAAIAAAAVAA0ABAAJAAEAAAAUAA0ABAAJAAEAAAATAA0ABAAJAAEAAAASAA4ABAAQAAUAAAAQAA8ABAAQAAUAAAANABAABAAQAAUAAAAMABEABAAQAAUAAAAJABMABAAQAAUAAAASAA0ABAAHAAEAAAAQAA4ABAAHAAEAAAANAA8ABAAHAAEAAAAMABAABAAHAAEAAAAJABEABAAHAAEAAAAJABIABAAQAAQAAAAIABMABAAHAAEAAAAIABQABAAQAAQAAAAIABUABAAQAAQAAAAIABYABAAQAAQAAAAIABcABAAQAAQAAAAIABgABAAQAAQAAAAKABEABAAJAAEAAAALABEABAAJAAEAAAAOAA8ABAAJAAEAAAAPAA8ABAAJAAEAAAARAA4ABAAJAAEAAAAKAAoAAQADAAEAAAAKAAsABAAVAAIAAAANAAoAAQAEAAEAAAANAAsABAATAAIAAAALAAoAAgAaAEkAAAAMAAoAAgAbAEkAAAAUAAoAAQADAAEAAAAWAAoAAQAEAAEAAAAVAAoAAgAaAEUAAAAQAAoABAAPAAIAAAAZAAoAAQADAAEAAAAaAAoAAQABAAEAAAAbAAoAAQAEAAEAAAAZAAsABAAPAAIAAAAbAAsABAAQAAIAAAAZAAwABAAPAAUAAAAaAAwABAAJAAEAAAAbAAwABAAQAAUAAAAeAAsAAQADAAEAAAAdAA0AAQADAAEAAAAeAAwABAAPAAIAAAAcAA8AAQABAAEAAAAdAA4ABAAPAAIAAAAbAA8AAQADAAEAAAAaABAAAQABAAEAAAAZABAAAQADAAEAAAAWABEAAQABAAEAAAAXABEAAgAaAEUAAAAYABEAAQABAAEAAAAUABEAAQADAAEAAAAQABMAAQADAAEAAAANABkABAAPAAIAAAANABgABAAPAAIAAAANABUAAQADAAEAAAANABYABAAPAAIAAAANABcABAAPAAIAAAAOABQAAQADAAEAAAAPABQAAQABAAEAAAARABMAAQABAAEAAAASABIAAQADAAEAAAATABIAAQABAAEAAAAeAA0ABAAVAAIAAAAdAA8ABAAVAAIAAAAfAAsAAgAaAEkAAAAgAAsAAgAbAEkAAAAhAAsAAgAaAEkAAAAQAAsABAAVAAIAAAAWAA0ABAAQAAUAAAAbABAABAAVAAIAAAAZABEABAAVAAIAAAAUABIABAAVAAIAAAASABMABAAVAAIAAAAQABQABAAVAAIAAAAOABUABAAVAAIAAAAIABkABAAQAAQAAAAVABEAAQABAAEAAAASAAkAAQAEAAEAAAASAAoABAANAAIAAAARAAkAAgAaAEUAAAA=")
tile_set = ExtResource("1_ha6tx")

[node name="nextStageZone" type="Area2D" parent="."]
position = Vector2(1, 3)
collision_layer = 19
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="nextStageZone"]
position = Vector2(87, 218)
shape = SubResource("RectangleShape2D_8cxkd")
metadata/_edit_group_ = true

[node name="nextStageZone2" type="Area2D" parent="."]
position = Vector2(282, 78)
collision_layer = 19
collision_mask = 19
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="nextStageZone2"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_7wqnl")

[node name="nextStageZone3" type="Area2D" parent="."]
collision_layer = 19
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="nextStageZone3"]
position = Vector2(-10, 78)
shape = SubResource("RectangleShape2D_urmcl")

[node name="platformer_caribou" parent="." instance=ExtResource("2_lytn4")]
position = Vector2(17, 92)
collision_layer = 19
collision_mask = 19

[node name="Camera2D" type="Camera2D" parent="platformer_caribou"]
position = Vector2(56, -29)
zoom = Vector2(6, 6)
limit_left = 0
limit_top = 0
limit_right = 272
limit_bottom = 208

[node name="CanvasLayer" type="CanvasLayer" parent="platformer_caribou/Camera2D"]

[node name="UiNightTimer" parent="platformer_caribou/Camera2D/CanvasLayer" instance=ExtResource("1_8gnde")]

[node name="UiCoinLife" parent="platformer_caribou/Camera2D/CanvasLayer" instance=ExtResource("2_v2qow")]
